--- a/docs/note/2025-07-24.md
+++ b/docs/note/2025-07-24.md
@@ -1,17 +1,17 @@
-# 📘 TypeConverter 상세 분석 및 메서드 설명
+# TypeConverter 상세 분석 및 메서드 설명
 
 ## 🔍 주요 메서드 상세 분석
 
 ### 1. `java.lang.reflect.Array.newInstance(componentType, 0)`
 
-#### 📋 코드 블럭:
+#### 코드 블럭:
 ```java
 if (value == null || value.trim().isEmpty()) {
     return java.lang.reflect.Array.newInstance(componentType, 0);
 }
 ```
 
-#### 🎯 **기능**:
+####  **기능**:
 - **리플렉션을 사용하여 배열을 동적으로 생성**하는 메서드
 - 컴파일 타임에 배열 타입을 알 수 없을 때 사용
 
